MVP added own article.

--- a/index.html
+++ b/index.html
@@ -123,6 +123,20 @@
             <span class='collapseButton'>Collapse</span>
           </div>
       </div>
+      <div class="article">
+        <h2>Hipsterem</h2>
+        <p class="date">Jan 30th, 2019</p>
+
+        <p>Lorem ipsum dolor amet thundercats snackwave air plant readymade, fingerstache YOLO four dollar toast XOXO. Ugh fanny pack palo santo letterpress. Cred DIY man bun selvage. Quinoa pabst farm-to-table helvetica retro bitters. Tacos af vaporware cloud bread air plant, poke blog la croix four dollar toast messenger bag. Skateboard waistcoat man braid mumblecore gluten-free occupy. Street art fanny pack tote bag organic normcore shaman. </p>
+
+        <p>Migas cray pitchfork enamel pin next level ennui waistcoat chicharrones, swag meh slow-carb 90's. Aesthetic mlkshk literally food truck cred leggings quinoa subway tile art party disrupt bespoke. Kogi keffiyeh crucifix portland af flannel. Twee tousled lo-fi, selvage letterpress pickled freegan man bun try-hard mixtape tofu single-origin coffee etsy heirloom fashion axe.</p>
+
+        <p>Trust fund food truck subway tile, vinyl whatever affogato mixtape. Messenger bag palo santo butcher vice. Helvetica mlkshk fixie street art tbh. Wolf normcore pok pok occupy. Sustainable hammock distillery enamel pin +1 mumblecore umami gastropub hoodie pok pok squid taiyaki. Hell of pickled cronut humblebrag pour-over sartorial. Disrupt jianbing migas church-key synth chicharrones sriracha readymade air plant.</p>
+        <div class='panelButtons'>
+          <span class='expandButton'>Expand</span>
+          <span class='collapseButton'>Collapse</span>
+        </div>
+      </div>
     </div>
   </body>
 </html>
